--- a/style.css
+++ b/style.css
@@ -160,6 +160,8 @@ body {
   animation-range: entry 0 cover 40%;
 }
 
+
+
 .eum {
   display: flex;
   flex-direction: row;
@@ -410,7 +412,7 @@ body {
   }
 
   #html #line, #css #line, #javascript #line, #photoshop #line {
-    gap: 10px; /* Adjust as necessary for better alignment */
+    gap: 10px; 
   }
 }
 #next {
@@ -489,6 +491,7 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
 
 #call h2 {
   font-size: 30px;
@@ -651,6 +654,7 @@ body {
   display: flex;
   flex-direction: row;
   gap: 25px;
+ 
 }
 
 .part2 {
@@ -708,31 +712,6 @@ body {
   max-width: 700px;
 }
 
-
-#price {
-  text-align: center;
-  padding: 50px 0;
-  background-color: #f3f5fa;
-}
-
-#price h1 {
-  font-size: 36px;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-#price {
-  padding-top: 20px;
-}
-
-#price .container {
-  padding: 10px 20px;
-}
-
-#price p {
-  padding-top: 10px;
-}
-
 .strikethrough {
   text-decoration: line-through; 
 }
@@ -743,73 +722,75 @@ body {
 
 
 
-#price .pricing-plan {
+
+
+.pricing-plan {
   padding: 50px 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
-#price .card-container {
+ .card-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 20px;
 }
 
-#price .card {
-  padding: 40px 20px;
+.card {
+  padding: 30px 20px;
   background-color: #fff;
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
   position: relative;
-  margin-top: 20px;
+  margin-top: 20px ;
 }
-
-#price .card h3 {
+.card h3 {
   font-size: 22px;
   color: rgb(24, 55, 112);
   padding: 20px 15px;
 }
 
-#price .card h1 sup {
+.card h1 sup {
   font-size: 21px;
   color: rgb(24, 55, 112);
 }
 
-#price .card h1 {
+.card h1 {
   font-size: 55px;
   color: rgb(24, 55, 112);
   font-weight: 300;
   padding-left: 15px;
 }
 
-#price .card p {
+.card p {
   color: #47b2e4;
   font-size: 18px;
   padding-bottom: 30px;
   padding-left: 15px;
 }
 
-#price .price-des {
+.price-des {
   padding: 5px 25px;
 }
 
-#price .price-des p {
+.price-des p {
   font-size: 17px;
   padding-top: 15px;
   color: rgb(173, 172, 172);
 }
 
-#price .price-des i {
+.price-des i {
   color: rgba(37, 173, 37, 0.7);
   margin-right: 10px;
 }
 
-#price .price-btn {
+.price-btn {
   padding: 40px 20px 30px 20px;
 }
 
-#price .price-btn a {
+.price-btn a {
   padding: 10px 20px;
   font-size: 20px;
   border: 2px solid #47b2e4;
@@ -818,36 +799,36 @@ body {
   text-decoration: none;  /* Remove underline */
 }
 
-#price .price-btn a:hover {
+ .price-btn a:hover {
   color: #fff;
   background-color: #47b2e4;
   text-decoration: none;  /* Remove underline on hover */
 }
 
-#price .featured-card {
+ .featured-card {
   border-top: 4px solid #47b2e4;
 }
 
-#price .featured-card .price-btn a {
+ .featured-card .price-btn a {
   background-color: #47b2e4;
   color: #fff;
 }
 
-/* Media Query for Mobile View */
+
 @media screen and (max-width: 999px) {
-  #price .pricing-plan {
+   .pricing-plan {
     flex-direction: column;
   }
 }
 
 @media screen and (max-width: 503px) {
-  #price .container {
+  .container {
     padding: 10px 10px;
   }
-  #price .pricing-plan {
+   .pricing-plan {
     padding: 50px 10px;
   }
-  #price .price-btn {
+   .price-btn {
     padding: 40px 10px 20px 10px;
   }
 }
@@ -988,19 +969,28 @@ color: #37517e;
     font-size: 18px;
     padding-left: 7px;
     transition: 0.3s;
+    margin-bottom: 15px;
+  
   }
   
   #contact textarea {
     min-height: 250px;
+    height: auto;
   }
   
   #contact .contact-btn {
     text-align: center;
+    display: flex;
+    justify-content: center;
   }
   
   #contact .contact-form .contact-btn a {
     background-color: #47b2e4;
+    font-size: 20px;
+    border-radius: 800px;
+    padding: 18px 30px;
     color: #fff;
+    text-decoration: none;
   }
   
   #contact .contact-form .contact-btn a:hover {
@@ -1216,4 +1206,82 @@ color: #37517e;
     font-weight: bold;
     color: #007bff;
   }
-  
+/* Transitions */
+
+#call{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+#subheading{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+#matter{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+#category{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+#row{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+#heading2{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+.row{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+.photorows{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+.pricing-plan{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+.side{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+.container{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+.join div {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+
+.cpyright{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
